[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "actorcritic"
version = "0.0.1"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "An easy implementation of Soft Actor Critic algorithm for facilitating research purposes."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "torch"]
keywords = ["reinforcement learning", "actor", "critic", "sac", "soft actor critic", "deep learning"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/actorcritic", Repository="https://github.com/tahashieenavaz/actorcritic", Documentation="https://github.com/tahashieenavaz/actorcritic#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
actorcritic = ["*.md", "*.txt"]
